--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item ">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                       <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/icoderbootstrap=/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
+                    <a class="nav-link" href="/icoderbootstrap/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,8 +47,8 @@
                         <a class="dropdown-item" href="#">right for us</a>
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/contact.html">Contact Us</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/icoderbootstrap/contact.html">Contact Us</a>
                 </li>
 
             </ul>
